# pitch_tracker

./: .gitignore  README.md  conf.yaml  pitch_tracker.ipynb  pyproject.toml  requirements.txt
src/: audio_file.py  beat.py  bpm.py  config.py
src/pitch_tracker/: audio_file.py  beat.py  bpm.py  cli.py  config.py  midi.py  notes.csv  pitch.py  pitch_finder.py  waveform_features.py
