[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pitch-tracker"
version = "0.0.1"
authors = [
  { name="Serge MASSON", email="serge.andre.masson@gmail.com" },
]
description = "An automatic transcription algorithm for guitar."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
]


classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "automatic transcription",
    "signal processing",
    "machine learning"
]

[project.scripts]
pitch = "cli:cli"

[tool.setuptools.packages.find]
where = ["src"] 

# [project.urls]
# "Homepage" = "https://github.com/Serge-Andre-MASSON/..."